LMMS-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lmms-backend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lmms-backend
  template:
    metadata:
      labels:
        app: lmms-backend
    spec:
      containers:
        - name: backend
          image: missaouisyrine/lmms-back:1.0
          ports:
            - containerPort: 8090
