LMMS-manifests/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lmms-database
  namespace: production
spec:
  selector:
    matchLabels:
      app: lmms-database
  serviceName: lmms-database
  replicas: 1
  template:
    metadata:
      labels:
        app: lmms-database
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteMany"]
        storageClassName: nfs-client
        resources:
          requests:
            storage: 5Gi
