LMMS-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmms-backend
  namespace: production
spec:
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    app: lmms-backend
  type: ClusterIP
