LMMS-manifests/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmms-database
  namespace: production
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: lmms-database
  clusterIP: None
