LMMS-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmms-frontend
  namespace: production
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: lmms-frontend
  type: ClusterIP
