LMMS-manifests/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lmms-backend-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: api.intraconnect.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lmms-backend
                port:
                  number: 8090
