LMMS-manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lmms-frontend-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: appp.intraconnect.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lmms-frontend
                port:
                  number: 3000
